fixed h3 element vertical alignment issue

--- a/src/mrs/static/sass/index.sass
+++ b/src/mrs/static/sass/index.sass
@@ -179,6 +179,7 @@
       padding-top: 0
       padding-bottom: 0
       font-weight: bold
+      line-height: 2.5rem
 
     .ajd--wrapper
       @media (min-width: $desktop-min-width)
